--- a/editor.css
+++ b/editor.css
@@ -859,6 +859,7 @@ svg {
   grid-template-areas: "author-avatar author-content";
 }
 .pp-template .wp-block-post .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar {
+  height: 48px;
   grid-area: author-avatar;
   place-self: center end;
 }
@@ -1051,6 +1052,7 @@ svg {
 .single .pp-main:not(.pp-front-page) .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar,
 .page .pp-main:not(.pp-front-page) .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar,
 .block-editor-block-list__layout .pp-main:not(.pp-front-page) .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar {
+  height: 48px;
   grid-area: author-avatar;
   place-self: center end;
 }
@@ -1282,6 +1284,7 @@ svg {
 .single .pp-main.pp-front-page .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar,
 .page .pp-main.pp-front-page .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar,
 .block-editor-block-list__layout .pp-main.pp-front-page .pp-article-footer .pp-article-metadata .pp-article-author .wp-block-post-author__avatar {
+  height: 48px;
   grid-area: author-avatar;
   place-self: center end;
 }
